[package]
name = "rust-callgraph"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo_metadata = "0.15"

# Enable the parts of Syn you need: "full" (for full AST) and "visit".
syn = { version = "2.0", features = ["full", "visit"] }

# For stable line/column info from Span::start() / Span::end()
proc-macro2 = { version = "1.0", features = ["span-locations"] }
